# poker

./: .gitignore  pyproject.toml
examples/: sample_from_range.py  table_odds.py
python/poker/: __init__.py  hand.py  odds.py  range.py
src/: CMakeLists.txt  Doxyfile  base.h  full_hand.cpp  full_hand.h  hand.cpp  hand.h  hand.py  math.cpp  math.h  poker.cpp  range.cpp  range.h  table.cpp  table.h  table_results.cpp  table_results.h
